Added max codeblock and comment

--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -69,6 +69,12 @@ This shows that Height and Width is the best model. We can further test the best
 
 ### Best Models
 
+```{r}
+which.max(summary.out$adjr2)
+```
+
+With the max codeblock it tells us that 2 is the best model. It has the highers r-squard value.
+
 ### Best Two regressor model
 
 
